--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+!**/shopee-indonesia-internal-play-**.apk
 
 ### VS Code ###
 .vscode/
