--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 *.apk filter=lfs diff=lfs merge=lfs -text
+apps/shopee-indonesia-internal-play-3.23.13@regression.apk filter=lfs diff=lfs merge=lfs -text
